# patterns

01_strategy/: CMakeLists.txt  main.cpp
01_strategy/Ducks/: duckbase.cpp  duckbase.h  exoticduck.cpp  exoticduck.h  rubberduck.cpp  rubberduck.h  simpleduck.cpp  simpleduck.h  upgradableduck.cpp  upgradableduck.h  woodenduck.cpp  woodenduck.h
01_strategy/Fly/: flywithwings.cpp  flywithwings.h  iflyable.h  nofly.cpp  nofly.h
01_strategy/Quack/: exoticquack.cpp  exoticquack.h  iquackable.h  noquack.cpp  noquack.h  simplequack.cpp  simplequack.h
02_observer/: 02_observer.pro  iobserver.cpp  iobserver.h  isubject.cpp  isubject.h  lentawidget.cpp  lentawidget.h  main.cpp  newsaggregator.cpp  newsaggregator.h  tvwidget.cpp  tvwidget.h  twitterwidget.cpp  twitterwidget.h
